<resources>
    <string name="app_name">FILTER IT</string>
    <string name="color">Barva</string>
    <string name="position">Pozice</string>
    <string name="shape">Tvar</string>
    <string name="sequence">Řada</string>
    <string name="startHelpColorParadigm">V tomto experimentu bude Vaším úkolem určit, zda došlo ke změně <![CDATA[<b>BARVY</b>]]> podnětů na jedné straně obrazovky.</string>
    <string name="welcomeText"><![CDATA[<h1>Vítejte v aplikaci Filter It!</h1>
        Právě se nacházíte na hlavní obrazovce, kde si můžete vybrat jednu z možností:
        <li>&nbsp;<b>TRÉNINK</b> - pro zahájení tréninku</li>
        <li>&nbsp;<b>INSTRUKCE</b> - pro podrobné vysvětlení jednotlivých úkolů</li>
        <li>&nbsp;<b>ZÁCVIK</b> - pro nezávazné vyzkoušení jednotlivých úkolů a úrovní</li>
        </br>
        Jak se Vám dařilo v jednotlivých úkolech zjistíte v části "Výsledky"]]>
    </string>
    <string name="tutorialPrepareForTrialText">Následující pokusy poběží normální rychlostí, která je poměrně rychlá, připravte se…</string>
    <string name="countDownFragmentContinueBtnText">Pokračovat v tréninku</string>
    <string name="countDownFragmentMessageText">Trénink se ukončí jako neplatný za: </string>
    <string name="emptyUsernameError">Pole uživatelského jména nesmí být prázdné!</string>
    <string name="newUserTitle">Nový Uživatel</string>
    <string name="userAlreadyExistsError">Uživatel s daným uživatelským jménem již existuje.</string>
    <string name="createUserBtnText">Vytvořit uživatele</string>
    <string name="cancelBtnText">Zrušit</string>
    <string name="userDoesNotExistError">Tento uživatel neexistuje.</string>
    <string name="difficultyLoweredMessage">VEDETE SI DOBŘE,\nTEĎ SI NA CHVÍLI TROCHU ODPOČINEME</string>
    <string name="difficultyRaisedMessage">VÝBORNĚ, TO VÁM ŠLO SKVĚLE!\nZKUSÍME ZVÝŠIT ÚROVEŇ</string>
    <string name="difficultySameMessage">SKVĚLÉ, JEN TAK DÁL!</string>
    <string name="errorGenericMessage">Jejda, bohužel něco nefungovalo.</string>
    <string name="errorNoParadigmsLeft">Žádné další zbývající úkoly.</string>
    <string name="errorNotLoggedIn">Nejste přihlášeni, budete přesměrováni na přihlašovací obrazovku.</string>
    <string name="errorTitle">Chyba</string>
    <string name="goBackBtnText">Vrátit se</string>
    <string name="sideMenuOptionTraining">Trénink</string>
    <string name="sideMenuOptionTrial">Zácvik</string>
    <string name="sideMenuOptionTutorial">Instrukce</string>
    <string name="sideMenuOptionIntro">Úvod</string>
    <string name="sideMenuOptionAbout">O aplikaci</string>
    <string name="sideMenuOptionTest">Test</string>
    <string name="lastSessionPerformanceOptionTitle">Poslední Trénink</string>
    <string name="allSessionsPerformanceOptionTitle">Všechny Tréninky</string>
    <string name="lastSessionColorResultsTitle">Výsledky posledního tréninku - BARVA</string>
    <string name="lastSessionPositionResultsTitle">Výsledky posledního tréninku - POZICE</string>
    <string name="lastSessionShapeResultsTitle">Výsledky posledního tréninku - TVAR</string>
    <string name="allSessionsColorResultsTitle">Přehled výsledků všech tréninků – BARVA</string>
    <string name="allSessionsPositionResultsTitle">Přehled výsledků všech tréninků – POZICE</string>
    <string name="allSessionsShapeResultsTitle">Přehled výsledků všech tréninků – TVAR</string>
    <string name="no">NE</string>
    <string name="ok">OK</string>
    <string name="startHelpPositionParadigm">V tomto experimentu bude Vaším úkolem určit, zda došlo ke změně <![CDATA[<b>POZICE</b>]]> podnětů na jedné straně obrazovky.</string>
    <string name="quitTrainingDialogMessage">Jste si jisti, že chcete ukončit trénink?</string>
    <string name="quitTrainingDialogTitle">Ukončení tréninku</string>
    <string name="selectParadigmTypeForTrialTitle">Výběr úkolu pro zácvik</string>
    <string name="startHelpShapeParadigm">V tomto experimentu bude Vaším úkolem určit, zda došlo ke změně <![CDATA[<b>TVARU</b>]]> podnětů na jedné straně obrazovky.</string>
    <string name="startTrainingBtnText">Začít trénink</string>
    <string name="nextBtnText">Další</string>
    <string name="prevBtnText">Předchozí</string>
    <string name="cueHelpColorParadigm">Uprostřed obrazovky je fixační kříž. Šipka nad ním určuje stranu pro zapamatování barvy podnětů. V tomto případě je to <![CDATA[<b>VPRAVO]]> od fixačního kříže.</string>
    <string name="cueHelpPositionParadigm">Uprostřed obrazovky je fixační kříž. Šipka nad ním určuje stranu pro zapamatování pozice podnětů. V tomto případě je to <![CDATA[<b>VPRAVO]]> od fixačního kříže.</string>
    <string name="cueHelpShapeParadigm">Uprostřed obrazovky je fixační kříž. Šipka nad ním určuje stranu pro zapamatování tvaru podnětů. V tomto případě je to <![CDATA[<b>VPRAVO]]> od fixačního kříže.</string>
    <string name="identificationHelpColorParadigm"><b>TEST</b> – Změnily se barvy na straně označené šipkou oproti předloze nebo jsou stejné?</string>
    <string name="identificationHelpShapeParadigm"><b>TEST</b> – Změnily se tvary na straně označené šipkou oproti předloze nebo jsou stejné?</string>
    <string name="identificationHelpPositionParadigm"><b>TEST</b> – Změnily se pozice na straně označené šipkou oproti předloze nebo jsou stejné?</string>
    <string name="interTrialPauseHelp">Pauza – krátký odpočinek před dalším pokusem.</string>
    <string name="longerPause">Delší pauza, na obrazovce vidíte pouze fixační kříž.</string>
    <string name="memorizeColorHelp">PŘEDLOHA - Snažte si zapamatovat barvy podnětů na straně určené šipkou.</string>
    <string name="memorizePositionHelp">PŘEDLOHA - Snažte si zapamatovat pozice podnětů na straně určené šipkou.</string>
    <string name="memorizeShapeHelp">PŘEDLOHA - Snažte si zapamatovat tvary podnětů na straně určené šipkou.</string>
    <string name="nowYouTryMessage"><![CDATA[<b>NYNÍ, KDYŽ UŽ VÍTE, JAK NA TO,\nMŮŽETE SI VYZKOUŠET PÁR ZÁCVIČNÝCH ÚKOLŮ</b>]]></string>
    <string name="shortPause">Krátká pauza, na obrazovce vidíte pouze fixační kříž.</string>
    <string name="continueBtnText">Rozumím, přejít k tréninku.</string>
    <string name="warningText">!UPOZORNĚNÍ – CELÝ TRÉNINK BUDE TRVAT PŘIBLIŽNĚ 20 MINUT!</string>
    <string name="yes">ano</string>
    <string name="actionExportData">Export výcvikových údaju</string>
    <string name="logout">Odhlásit se</string>
    <string name="dataExportSuccess">Údaje byly úspěšně exportovány.</string>
    <string name="modeSelectionTitle">Výběr Režimu</string>
    <string name="performanceSummaryTitle">Přehled Výkonnosti</string>
    <string name="colorParadigmPerformanceSummary">Přehled výkonu v úkolu - barva</string>
    <string name="positionParadigmPerformanceSummary">Přehled výkonu v úkolu - pozice</string>
    <string name="shapeParadigmPerformanceSummary">Přehled výkonu v úkolu - tvar</string>
    <string name="lastLoginAsLabel">Poslední přihlášení jako: </string>
    <string name="usernameLabel">Uživatelské Jméno</string>
    <string name="loginBtnText">Přihlásit se</string>
    <string name="difficultyLabel">Úroveň: </string>
    <string name="tryColorParadigmBtn">Vyzkoušet "Barvu"</string>
    <string name="tryPositionParadigmBtn">Vyzkoušet "Pozici"</string>
    <string name="tryShapeParadigmBtn">Vyzkoušet "Tvar"</string>
    <string name="mainCardTitle">Hlavní</string>
    <string name="modesCardTitle">Režimy</string>
    <string name="resultsCardTitle">Výsledky</string>
    <string name="levelProgressionLabel">Postup úrovně v úkolu</string>
    <string name="maxLevelReachedLabel">Nejvyšší dosažená úroveň v úkolu</string>
    <string name="notEnoughTrainingDataMessage">Nejsou k dispozici dostatečné údaje o tréninku, prosím dokončete nejprve několik tréninků.</string>
    <string name="noChartDataAvailableText">Žádné údaje grafu nejsou k dispozici</string>
    <string name="trainingStartsInTitle">Výcvik začne za:</string>
    <string name="startImmediatelyBtnText">začít okamžitě</string>
    <string name="saveBtnText">Uložit</string>
    <string name="questionnaireTitle">Zkuste ohodnotit od 1 do 5…</string>
    <string name="effortQuestionText">Vaše úsilí a snahu při tréninku:</string>
    <string name="difficultyQuestionText">Náročnost/obtížnost tréninku:</string>
    <string name="answerQuestionnaireErrorTitle">Některé otázky nejsou zodpovězeny</string>
    <string name="answerQuestionnaireErrorText">Před uložením zodpovězte všechny otázky, prosím.</string>
    <string name="ratingNoConditionReachedText">Tentokrát jste nesplnil/a podmínky pro ohodnocení.\nMožná budete mít příště větší štěstí.</string>
    <string name="ratingSumConditionText">Vaše výsledky v tomto tréninku jsou stejné či lepší než v předchozím tréninku.</string>
    <string name="ratingPauseConditionText">Během tréninku jste neuděl/a pauzu delší než 15 vteřin.</string>
    <string name="ratingAllParadigmsRaisedText">V každém úkolu byla úroveň zvýšena alespoň o 1.</string>
    <string name="correntTrialAnswerRatio">Odpověděli jste správně na <![CDATA[<b>%d/%d</b>]]> testů.</string>
    <string name="yourProgressInTaskTitle">Váš postup v tomto úkolu:</string>
    <string name="presentationTime">Prezentační\nčas:</string>
    <string name="difficultyDescriptionEasy">(nejmenší)</string>
    <string name="difficultyDescriptionHard">(největší)</string>
    <string name="thankYouForTrainingMessage">Děkujeme Vám za Vaš čas a snahu.\nPro ukončení tréninku a zobrazení Vašich výsledků stiskněte tlačítko:</string>
    <string name="finishBtnText">KONEC</string>

    <string name="settingsOption">Nastavení</string>
    <string name="settingsSetTrialNum">Nastavit počet pokusů</string>
    <string name="settingsSetTrialNumSummary">Nastavte počet pokusů pro režim zácviku\n(Platí pro všechny uživatele na zařízení)</string>
    <string name="settingsSetTrialPresentation">Nastavit prezentační čas</string>
    <string name="settingsSetTrialPresentationSummary">Nastavte jak dlouho trvá doba prezentace pokusů v milisekundách, v režimu zácviku\n(Platí pro všechny uživatele na zařízení)</string>

    <string name="homeFile">home.html</string>
</resources>
