<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cz.nudz.www.trainingapp.login.SignupFragment">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="24dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <!--<ImageView android:src="@drawable/logo"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="72dp"-->
                <!--android:layout_marginBottom="24dp"-->
                <!--android:layout_gravity="center_horizontal" />-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_gravity="center_horizontal"
                android:textSize="24sp"
                android:typeface="normal"
                android:text="@string/newUserTitle"/>

        <!--  Username Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/usernameLabel" />
            </android.support.design.widget.TextInputLayout>

            <!-- Signup Button -->
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:text="@string/createUserBtnText"/>

        </LinearLayout>
    </ScrollView>
</layout>
