<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cz.nudz.www.trainingapp.summary.SessionRecapFragment">

    <ScrollView
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingRight="8dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/lastSessionColorResultsTitle"/>

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/colorChart"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:minHeight="300dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="24dp"
                android:text="@string/lastSessionPositionResultsTitle"/>

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/positionChart"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:minHeight="300dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="24dp"
                android:text="@string/lastSessionShapeResultsTitle"/>

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/shapeChart"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:minHeight="300dp"/>
        </LinearLayout>

    </ScrollView>
</layout>
