<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        tools:context="cz.nudz.www.trainingapp.training.PauseFragment"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book."
            android:textAlignment="center"
            android:id="@+id/warningFragmentExplanation"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/warningFragmentWarning" />

        <TextView
            android:id="@+id/warningFragmentWarning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/warningText"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@id/guideline"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <Button
            android:id="@+id/warningFragmentGoBackBtn"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/goBackBtnText"
            app:layout_constraintRight_toLeftOf="@+id/warningFragmentStartTrainingBtn"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/warningFragmentExplanation"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="0dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Button
            android:id="@+id/warningFragmentStartTrainingBtn"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/startTrainingBtnText"
            app:layout_constraintLeft_toRightOf="@id/warningFragmentGoBackBtn"
            app:layout_constraintTop_toTopOf="@id/warningFragmentGoBackBtn"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

    </android.support.constraint.ConstraintLayout>
</layout>

