<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cz.nudz.www.trainingapp.training.QuestionnaireFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".2" />

        <TextView
            android:id="@+id/difficultyQuestion"
            style="@style/TitleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="48dp"
            android:text="@string/difficultyQuestionText"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline" />

        <RadioGroup
            android:id="@+id/difficultyGrp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/difficultyQuestion">

            <RadioButton
                android:id="@+id/difficultyBtn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="16dp"
                android:text="1" />

            <RadioButton
                android:id="@+id/difficultyBtn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="16dp"
                android:text="2" />

            <RadioButton
                android:id="@+id/difficultyBtn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="16dp"
                android:text="3" />

            <RadioButton
                android:id="@+id/difficultyBtn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="16dp"
                android:text="4" />

            <RadioButton
                android:id="@+id/difficultyBtn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="5" />
        </RadioGroup>

        <TextView
            android:id="@+id/effortQuestion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="48dp"
            android:textAlignment="center"
            style="@style/TitleText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/difficultyGrp"
            android:text="@string/effortQuestionText" />

        <RadioGroup
            android:id="@+id/effortGrp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/effortQuestion">

            <RadioButton
                android:id="@+id/effortBtn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="16dp"
                android:text="1" />

            <RadioButton
                android:id="@+id/effortBtn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="16dp"
                android:text="2" />

            <RadioButton
                android:id="@+id/effortBtn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="16dp"
                android:text="3" />

            <RadioButton
                android:id="@+id/effortBtn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="16dp"
                android:text="4" />

            <RadioButton
                android:id="@+id/effortBtn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="16dp"
                android:text="5" />
        </RadioGroup>

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/saveBtnText"
            app:layout_constraintEnd_toEndOf="@+id/effortGrp"
            app:layout_constraintStart_toStartOf="@+id/effortGrp"
            app:layout_constraintTop_toBottomOf="@+id/effortGrp" />

        <TextView
            android:id="@+id/titleText"
            style="@style/TitleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/questionnaireTitle"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>
</layout>
